# helper/jwt.go
@@ -1,0 +1,91 @@
+package helper
+
+import (
+	"blog-api-golang/models"
+	"github.com/appleboy/gin-jwt/v2"
+	"github.com/gin-gonic/gin"
+	"time"
+)
+
+var (
+	IdentityKey = "id"
+)
+
+func SetJWTMid() *jwt.GinJWTMiddleware {
+	return &jwt.GinJWTMiddleware{
+		Realm:       "test zone",
+		Key:         []byte("secret key"),
+		Timeout:     time.Hour,
+		MaxRefresh:  time.Hour,
+		IdentityKey: IdentityKey,
+		PayloadFunc: payloadFunc(),
+
+		IdentityHandler: identityHandler(),
+		Authenticator:   authenticator(),
+		Authorizator:    authorizator(),
+		Unauthorized:    unauthorized(),
+		TokenLookup:     "header: Authorization, query: token, cookie: jwt",
+		// TokenLookup: "query:token",
+		// TokenLookup: "cookie:token",
+		TokenHeadName: "Bearer",
+		TimeFunc:      time.Now,
+	}
+}
+
+func payloadFunc() func(data interface{}) jwt.MapClaims {
+	return func(data interface{}) jwt.MapClaims {
+		if v, ok := data.(*models.User); ok {
+			return jwt.MapClaims{
+				IdentityKey: v.UserName,
+			}
+		}
+		return jwt.MapClaims{}
+	}
+}
+
+func identityHandler() func(c *gin.Context) interface{} {
+	return func(c *gin.Context) interface{} {
+		claims := jwt.ExtractClaims(c)
+		return &models.User{
+			UserName: claims[IdentityKey].(string),
+		}
+	}
+}
+
+func authenticator() func(c *gin.Context) (interface{}, error) {
+	return func(c *gin.Context) (interface{}, error) {
+		var loginVals models.Login
+		if err := c.ShouldBind(&loginVals); err != nil {
+			return "", jwt.ErrMissingLoginValues
+		}
+		userID := loginVals.UserName
+		password := loginVals.Password
+
+		if (userID == "admin" && password == "admin") || (userID == "test" && password == "test") {
+			return &models.User{
+				UserName:  userID,
+				LastName:  "LastName",
+				FirstName: "FirstName",
+			}, nil
+		}
+		return nil, jwt.ErrFailedAuthentication
+	}
+}
+
+func authorizator() func(data interface{}, c *gin.Context) bool {
+	return func(data interface{}, c *gin.Context) bool {
+		if v, ok := data.(*models.User); ok && v.UserName != "" {
+			return true
+		}
+		return false
+	}
+}
+
+func unauthorized() func(c *gin.Context, code int, message string) {
+	return func(c *gin.Context, code int, message string) {
+		c.JSON(code, gin.H{
+			"code":    code,
+			"message": message,
+		})
+	}
+}
